# server/src/main/java/de/borstelmann/doorbell/server/controller/UserController.java
@@ -2,7 +2,6 @@ package de.borstelmann.doorbell.server.controller;
 
 import de.borstelmann.doorbell.server.domain.model.User;
 import de.borstelmann.doorbell.server.openapi.api.UserApi;
-import de.borstelmann.doorbell.server.openapi.model.UserRequest;
 import de.borstelmann.doorbell.server.openapi.model.UserResponse;
 import de.borstelmann.doorbell.server.services.UserService;
 import lombok.RequiredArgsConstructor;
@@ -21,14 +20,6 @@ public class UserController implements UserApi {
 
     private final ModelMapper modelMapper;
     private final UserService userService;
-
-    @Override
-    public ResponseEntity<UserResponse> createUser(UserRequest userRequest) {
-        User userToCreate = convertToDomainModel(userRequest);
-        User createdUser = userService.createUser(userToCreate);
-        UserResponse userResponse = convertToResponse(createdUser);
-        return ResponseEntity.ok(userResponse);
-    }
 
     @Override
     public ResponseEntity<Void> deleteUser(Long userId) {
@@ -50,10 +41,6 @@ public class UserController implements UserApi {
         User user = userService.getUserById(userId);
         UserResponse userResponse = convertToResponse(user);
         return ResponseEntity.ok(userResponse);
-    }
-
-    private User convertToDomainModel(UserRequest userRequest) {
-        return modelMapper.map(userRequest, User.class);
     }
 
     private UserResponse convertToResponse(User createdUser) {
